[gd_scene load_steps=9 format=3 uid="uid://by8ufk1nmsah6"]

[ext_resource type="Script" uid="uid://6644sfu1n8qf" path="res://시작화면/game_clear.gd" id="1_t63bu"]
[ext_resource type="FontFile" uid="uid://d0m6w61eye8j" path="res://에셋/폰트/Sam3KRFont.ttf" id="2_3lg07"]
[ext_resource type="FontFile" uid="uid://cfyd7jhx885x8" path="res://에셋/폰트/DOSGothic.ttf" id="2_14y4d"]
[ext_resource type="Texture2D" uid="uid://8nc1w5mah4f8" path="res://에셋/배경/스토리패널/엔딩씬.png" id="4_oelhy"]

[sub_resource type="Animation" id="Animation_oelhy"]
resource_name = "GameClear"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("엔딩씬:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wtdwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("엔딩씬:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t3ym1"]
_data = {
&"GameClear": SubResource("Animation_oelhy"),
&"RESET": SubResource("Animation_wtdwl")
}

[sub_resource type="LabelSettings" id="LabelSettings_oelhy"]
font = ExtResource("2_3lg07")
font_size = 80
font_color = Color(0.50748, 0.578346, 0.967189, 1)
outline_size = 6
outline_color = Color(0.0142752, 0.0142752, 0.0142752, 1)
shadow_size = 5
shadow_offset = Vector2(3, 1)

[node name="GameClear" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_t63bu")

[node name="GameClear_Scene" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameClear_Scene"]
libraries = {
&"": SubResource("AnimationLibrary_t3ym1")
}

[node name="엔딩씬" type="Sprite2D" parent="GameClear_Scene"]
modulate = Color(1, 1, 1, 0)
position = Vector2(640, 357.5)
scale = Vector2(0.833333, 0.739258)
texture = ExtResource("4_oelhy")

[node name="GameClearLabel" type="Label" parent="."]
visible = false
offset_left = 482.5
offset_top = 181.0
offset_right = 842.5
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("2_3lg07")
text = "Game Clear"
label_settings = SubResource("LabelSettings_oelhy")

[node name="RetryBtn" type="Button" parent="."]
visible = false
offset_left = 591.0
offset_top = 403.0
offset_right = 734.0
offset_bottom = 443.0
theme_override_fonts/font = ExtResource("2_14y4d")
theme_override_font_sizes/font_size = 30
text = "다시 시작"

[node name="QuitBtn" type="Button" parent="."]
visible = false
offset_left = 590.0
offset_top = 483.0
offset_right = 733.0
offset_bottom = 523.0
theme_override_fonts/font = ExtResource("2_14y4d")
theme_override_font_sizes/font_size = 30
text = "게임 종료"

[connection signal="pressed" from="RetryBtn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_quit_btn_pressed"]
